Using the NSURLConnection to fetch the data from a URL, also the send some parameters and fetch the URL. Using of delegates to deal with the obtained outputs.

--- a/Day7/Base.lproj/Main.storyboard
+++ b/Day7/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +16,58 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nNh-bn-jZc">
+                                <rect key="frame" x="52" y="43" width="497" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLx-Kh-VwN">
+                                <rect key="frame" x="461" y="124" width="88" height="30"/>
+                                <state key="normal" title="Fetch Data 2">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="txtFetchData2:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="HXp-kE-CNc"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJb-KD-hRj">
+                                <rect key="frame" x="52" y="224" width="497" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="7il-7o-6BH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n1q-Lv-txx">
+                                <rect key="frame" x="52" y="124" width="88" height="30"/>
+                                <state key="normal" title="Fetch Data 1">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnFetchData1:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="tcs-TX-Bug"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CJb-KD-hRj" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="204" id="442-Xe-tog"/>
+                            <constraint firstItem="n1q-Lv-txx" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="104" id="58M-wY-tLr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VLx-Kh-VwN" secondAttribute="trailing" constant="35" id="AfN-VZ-w4p"/>
+                            <constraint firstItem="nNh-bn-jZc" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Fne-zC-PTs"/>
+                            <constraint firstItem="VLx-Kh-VwN" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="104" id="K6g-Jk-pin"/>
+                            <constraint firstAttribute="centerX" secondItem="CJb-KD-hRj" secondAttribute="centerX" id="Shi-dB-1Md"/>
+                            <constraint firstItem="nNh-bn-jZc" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="23" id="b73-Ji-nq8"/>
+                            <constraint firstItem="n1q-Lv-txx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="36" id="cX3-CI-Fjh"/>
+                            <constraint firstItem="nNh-bn-jZc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="36" id="djF-Xd-YWY"/>
+                            <constraint firstItem="CJb-KD-hRj" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="36" id="yXf-cH-ecT"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lblData" destination="CJb-KD-hRj" id="Xks-ce-MvK"/>
+                        <outlet property="txtName" destination="nNh-bn-jZc" id="BF3-WT-iqT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
